--- a/SECB/app/src/main/res/layout-ar/event_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_item_card.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <!--android:paddingBottom="@dimen/event_card_margin"
+<?xml version="1.0" encoding="utf-8"?><!--android:paddingBottom="@dimen/event_card_margin"
      android:paddingTop="@dimen/event_card_margin"-->
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="@dimen/item_card_height"
-          android:layout_marginBottom="@dimen/eguide_base_padding"
-          android:layout_marginTop="@dimen/eguide_base_padding"
-          android:background="@color/off_white"
-          android:gravity="right"
-          android:orientation="horizontal"
-          android:padding="@dimen/event_card_margin"
-          android:weightSum="3">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/item_card_height"
+    android:layout_marginBottom="@dimen/eguide_base_padding"
+    android:layout_marginTop="@dimen/eguide_base_padding"
+    android:background="@color/off_white"
+    android:gravity="right"
+    android:orientation="horizontal"
+    android:padding="@dimen/event_card_margin"
+    android:weightSum="3">
 
     <!--android:layout_marginLeft="@dimen/event_card_margin"-->
     <LinearLayout
@@ -18,7 +17,6 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:orientation="vertical"
-
         android:weightSum="3">
 
         <TextView
@@ -26,23 +24,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
             android:ellipsize="end"
+            android:gravity="right"
             android:maxLines="1"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/event_card_h1_text_size"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtv_eventDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:gravity="right"
             android:ellipsize="end"
+            android:gravity="right"
             android:maxLines="2"
             android:textColor="@color/secb_grey_text"
-            android:textSize="@dimen/event_card_h3_text_size"/>
+            android:textSize="@dimen/event_card_h3_text_size" />
 
         <!--<LinearLayout
             android:layout_width="match_parent"
@@ -119,22 +117,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="right"
-            android:orientation="horizontal"
-            android:weightSum="3">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtv_event_timeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-
-                android:drawableRight="@drawable/event_card_time_icon"
                 android:drawablePadding="3dp"
+                android:drawableRight="@drawable/event_card_time_icon"
                 android:ellipsize="end"
                 android:gravity="right"
                 android:maxLines="1"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
 
 
             <!--android:layout_marginLeft="@dimen/event_card_margin"-->
@@ -143,17 +139,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:drawablePadding="3dp"
                 android:drawableRight="@drawable/event_card_place_icon"
                 android:ellipsize="end"
                 android:gravity="right"
                 android:maxLines="1"
-
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
 
 
             <TextView
@@ -161,16 +155,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/event_card_margin"
-                android:layout_weight="1"
-                android:drawableRight="@drawable/event_card_filter_icon"
                 android:drawablePadding="3dp"
+                android:drawableRight="@drawable/event_card_filter_icon"
                 android:ellipsize="end"
                 android:gravity="right"
                 android:maxLines="1"
-
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
         </TableRow>
 
     </LinearLayout>
@@ -182,15 +173,17 @@
         android:layout_height="@dimen/evet_card_img_size"
         android:layout_marginLeft="@dimen/event_card_margin"
         android:src="@drawable/event_card_img"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="@dimen/evet_card_img_size"
         android:layout_height="@dimen/evet_card_img_size"
-        android:background="@color/secb_dark_text"
-        android:layout_marginLeft="@dimen/event_card_margin"
-        android:gravity="center"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/event_card_margin"
+        android:background="@color/secb_dark_text"
+        android:gravity="center"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/txtv_eventImgDate_day"
             android:layout_width="wrap_content"
@@ -198,16 +191,15 @@
             android:text="13"
             android:textColor="@color/secb_orange"
             android:textSize="@dimen/eventImgDate_day_text_size"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/txtv_eventImgDate_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OCT"
             android:textColor="@color/white"
-            android:textSize="@dimen/eventImgDate_month_text_size"
-            />
+            android:textSize="@dimen/eventImgDate_month_text_size" />
     </LinearLayout>
 
 </TableRow>
