--- a/SECB/app/src/main/res/layout/location_details.xml
+++ b/SECB/app/src/main/res/layout/location_details.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Loading -->
         <TextView
             android:id="@+id/txtv_noData"
             android:layout_width="match_parent"
@@ -20,7 +21,7 @@
             android:text="@string/loading"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/gallery_item_text_size"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
 
         <LinearLayout
@@ -38,9 +39,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/off_white"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/organizer_details_margin"
-                android:paddingLeft="@dimen/organizer_details_margin"
-                android:paddingRight="@dimen/organizer_details_margin">
+                android:paddingBottom="@dimen/location_details_margin">
 
                 <ImageView
                     android:id="@+id/imgv_locationImg"
@@ -49,7 +48,7 @@
                     android:layout_gravity="center_horizontal|top"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/news_img_sample"/>
+                    android:src="@drawable/news_img_sample" />
 
                 <ImageButton
                     android:id="@+id/btn_nextRoom"
@@ -58,8 +57,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/arrow_to_right"
-                    android:paddingRight="@dimen/organizer_details_margin"
-                    android:visibility="gone"/>
+                    android:paddingRight="@dimen/location_details_margin"
+                    android:visibility="gone" />
 
                 <ImageButton
                     android:id="@+id/btn_previousRoom"
@@ -68,10 +67,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/arrow_to_left_disabled"
-                    android:paddingRight="@dimen/organizer_details_margin"
-                    android:visibility="gone"/>
-
-
+                    android:paddingRight="@dimen/location_details_margin"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <LinearLayout
@@ -80,9 +77,7 @@
                 android:layout_weight="1"
                 android:background="@color/off_white"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/organizer_details_margin"
-                android:paddingLeft="@dimen/organizer_details_margin"
-                android:paddingRight="@dimen/organizer_details_margin">
+                android:paddingBottom="@dimen/location_details_margin">
 
 
                 <include
@@ -90,22 +85,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/organizer_details_margin_small"
-                    android:layout_marginLeft="@dimen/organizer_details_margin"
-
-                    android:layout_marginRight="@dimen/organizer_details_margin"
-                    android:layout_marginTop="@dimen/organizer_details_margin_small"
-                    />
+                    android:layout_marginLeft="@dimen/location_details_margin"
+                    android:layout_marginRight="@dimen/location_details_margin"
+                    android:layout_marginTop="@dimen/organizer_details_margin_small" />
 
                 <TextView
                     android:id="@+id/txtv_location_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/organizer_details_margin"
+                    android:layout_marginLeft="@dimen/location_details_margin"
 
                     android:layout_marginTop="@dimen/organizer_details_margin_small"
-                    android:text="adssssssssssssasdad adssssssssssssasdad adssssssssssssasdad adssssssssssssasdad adssssssssssssasdad adssssssssssssasdad adssssssssssssasdad"
+                    android:text="Desc"
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/event_card_h3_text_size"/>
+                    android:textSize="@dimen/event_card_h3_text_size" />
 
             </LinearLayout>
 
@@ -113,12 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/organizer_details_margin_small"
-                android:background="@color/off_white"
-                android:paddingLeft="@dimen/organizer_details_margin"
-                android:paddingRight="@dimen/organizer_details_margin"
-
-
-                >
+                android:background="@color/off_white">
 
                 <include
                     android:id="@+id/location_capacity_info"
@@ -126,9 +114,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/organizer_details_margin_small"
-                    android:layout_marginLeft="@dimen/organizer_details_margin"
+                    android:layout_marginLeft="@dimen/location_details_margin"
 
-                    android:layout_marginRight="@dimen/organizer_details_margin"
+                    android:layout_marginRight="@dimen/location_details_margin"
                     android:layout_marginTop="@dimen/organizer_details_margin_small"
                     android:background="@color/off_white"
                     android:visibility="visible"
@@ -136,8 +124,8 @@
                     />
             </LinearLayout>
 
-            <!--android:paddingLeft="@dimen/organizer_details_margin"-->
-            <!--android:paddingRight="@dimen/organizer_details_margin"-->
+            <!--android:paddingLeft="@dimen/location_details_margin"-->
+            <!--android:paddingRight="@dimen/location_details_margin"-->
             <LinearLayout
                 android:id="@+id/layout_rooms_container"
                 android:layout_width="match_parent"
@@ -152,7 +140,8 @@
                     layout="@layout/location_room_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/organizer_details_margin_small"
+                    android:layout_marginTop="@dimen/organizer_details_margin_small"
+                    android:layout_marginBottom="@dimen/organizer_details_margin_small"
                     android:background="@color/off_white"
                     android:visibility="visible"
 
@@ -164,15 +153,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:background="@color/off_white"
-                android:paddingLeft="@dimen/organizer_details_margin"
-                android:paddingRight="@dimen/organizer_details_margin">
+                android:paddingLeft="@dimen/location_details_margin"
+                android:paddingRight="@dimen/location_details_margin">
 
                 <include
                     android:id="@+id/location_personal_info"
                     layout="@layout/location_personal_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/organizer_details_margin_small"
+                    android:layout_marginTop="@dimen/organizer_details_margin_small"
+                    android:layout_marginBottom="@dimen/organizer_details_margin_small"
                     android:layout_weight="1.0"
                     android:background="@color/off_white"
                     android:visibility="visible"
