--- a/SECB/app/src/main/res/layout/location_room_info.xml
+++ b/SECB/app/src/main/res/layout/location_room_info.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/organizer_details_margin_small"
-        android:paddingLeft="@dimen/organizer_details_margin"
-        android:paddingRight="@dimen/organizer_details_margin"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/location_details_margin"
+        android:paddingRight="@dimen/location_details_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +30,6 @@
                     android:id="@+id/txtv_location_roomTypeTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
                     android:layout_marginRight="@dimen/organizer_p_info_icon_margin"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
@@ -38,7 +37,7 @@
                     android:text="@string/location_roomType"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/event_card_h3_text_size"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtv_location_roomTypeValue"
@@ -49,7 +48,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/event_card_h3_text_size"/>
+                    android:textSize="@dimen/event_card_h3_text_size" />
 
             </TableRow>
 
@@ -71,7 +70,7 @@
                     android:text="@string/location_spaceTitle"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/event_card_h3_text_size"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtv_location_roomCapacityValue"
@@ -83,7 +82,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/event_card_h3_text_size"/>
+                    android:textSize="@dimen/event_card_h3_text_size" />
             </TableRow>
 
         </LinearLayout>
@@ -92,8 +91,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/organizer_details_margin_small"
             android:layout_marginBottom="@dimen/organizer_details_margin_small"
+            android:layout_marginTop="@dimen/organizer_details_margin_small"
             android:orientation="horizontal">
 
             <TableRow
@@ -105,7 +104,6 @@
                     android:id="@+id/txtv_location_roomSpaceTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
                     android:layout_marginRight="@dimen/organizer_p_info_icon_margin"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
@@ -113,7 +111,7 @@
                     android:text="@string/location_roomSpace"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/event_card_h3_text_size"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtv_location_roomSpaceValue"
@@ -124,7 +122,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/event_card_h3_text_size"/>
+                    android:textSize="@dimen/event_card_h3_text_size" />
 
             </TableRow>
 
@@ -145,7 +143,7 @@
                     android:text="@string/location_roomCountTitle"
                     android:textColor="@color/secb_dark_text"
                     android:textSize="@dimen/event_card_h3_text_size"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtv_location_roomCountValue"
@@ -157,7 +155,7 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/event_card_h3_text_size"/>
+                    android:textSize="@dimen/event_card_h3_text_size" />
             </TableRow>
 
 
