--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -32,7 +32,7 @@
     <dimen name="menu_width">222dp</dimen> <!-- 500PX - WIDTH -->
 
     <dimen name="header_menu_icon_margin_start">17dp</dimen> <!-- 38PX - WIDTH -->
-    <dimen name="header_menu_icon_margin_end">32dp</dimen> <!-- 73PX - WIDTH -->
+    <dimen name="header_menu_icon_margin_end">20dp</dimen> <!-- 73PX - WIDTH -->
     <dimen name="header_title_text_size">16sp</dimen><!-- 40PX - HEIGHT -->
 
     <dimen name="home_graphs_card_margin_top">4dp</dimen> <!-- 10PX - HEIGHT -->
@@ -53,7 +53,7 @@
     <dimen name="eventImgDate_day_text_size">20dp</dimen> <!-- 50PX - HEIGHT -->
     <dimen name="eventImgDate_month_text_size">10dp</dimen> <!-- 25PX - HEIGHT -->
 
-    <dimen name="home_news_recycler_height">123dp</dimen> <!-- 310PX - HEIGHT -->
+    <dimen name="home_news_recycler_height">90dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="news_item_card_height">58dp</dimen> <!-- 140PX - HEIGHT -->
     <dimen name="news_filter_screen_height">359dp</dimen> <!-- 905PX - HEIGHT -->
@@ -99,6 +99,7 @@
     <dimen name="organizer_p_info_h2_text_size">10dp</dimen> <!-- 24PX - HEIGHT -->
     <!--<dimen name="organizer_p_info_rows_margin">12dp</dimen> &lt;!&ndash; 30PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_details_margin">14dp</dimen> <!-- 35PX - HEIGHT -->
+    <dimen name="location_details_margin">10dp</dimen>
     <!--<dimen name="organizer_details_margin_small">8dp</dimen> &lt;!&ndash; 20PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_card_img_size">55dp</dimen> <!-- 138PX - HEIGHT -->
 
@@ -119,7 +120,7 @@
 
     <!--<dimen name="eservice_item_padding">11dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
 
-    <dimen name="eservice_item_padding">6dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="eservice_item_padding">4dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">10dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">11dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">70dp</dimen>
