--- a/SECB/app/src/main/res/values-large/dimens.xml
+++ b/SECB/app/src/main/res/values-large/dimens.xml
@@ -32,7 +32,7 @@
 
 
     <dimen name="header_menu_icon_margin_start">19dp</dimen> <!-- 38PX - WIDTH -->
-    <dimen name="header_menu_icon_margin_end">37dp</dimen> <!-- 73PX - WIDTH -->
+    <dimen name="header_menu_icon_margin_end">25dp</dimen> <!-- 73PX - WIDTH -->
     <dimen name="header_title_text_size">20sp</dimen><!-- 40PX - HEIGHT -->
 
 
@@ -56,7 +56,7 @@
     <dimen name="eventImgDate_day_text_size">27dp</dimen> <!-- 50PX - HEIGHT -->
     <dimen name="eventImgDate_month_text_size">14dp</dimen> <!-- 25PX - HEIGHT -->
 
-    <dimen name="home_news_recycler_height">166dp</dimen> <!-- 310PX - HEIGHT -->
+    <dimen name="home_news_recycler_height">130dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">14dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="news_item_card_height">78dp</dimen> <!-- 140PX - HEIGHT -->
     <dimen name="news_filter_screen_height">483dp</dimen> <!-- 905PX - HEIGHT -->
@@ -98,6 +98,7 @@
     <dimen name="organizer_p_info_h2_text_size">13dp</dimen> <!-- 24PX - HEIGHT -->
     <!--<dimen name="organizer_p_info_rows_margin">16dp</dimen> &lt;!&ndash; 30PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_details_margin">19dp</dimen> <!-- 35PX - HEIGHT -->
+    <dimen name="location_details_margin">14dp</dimen>
     <!--<dimen name="organizer_details_margin_small">11dp</dimen> &lt;!&ndash; 20PX - HEIGHT &ndash;&gt;-->
     <dimen name="organizer_card_img_size">74dp</dimen> <!-- 138PX - HEIGHT -->
 
@@ -117,7 +118,7 @@
     <dimen name="eservice_colored_line_width">6dp</dimen> <!-- 10PX - WIDTH -->
     <!--<dimen name="eservice_item_padding">15dp</dimen> &lt;!&ndash; 28PX - HEIGHT &ndash;&gt;-->
 
-    <dimen name="eservice_item_padding">8dp</dimen> <!-- 15PX - HEIGHT -->
+    <dimen name="eservice_item_padding">6dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="eservice_item_text_size">14dp</dimen> <!-- 26PX - HEIGHT -->
     <dimen name="eservice_item_title_text_size">15dp</dimen> <!-- 28PX - HEIGHT -->
     <dimen name="eservice_filter_screen_recycler_height">100dp</dimen>
